# openvla

./: .gitignore  README.md  cus_train.sh  outputs  pyproject.toml  run.sh  test_config_parse.py  test_qwen3_integration.py  visualize_debug_images.py
config/: config.yaml
config/mode/: train.yaml
config/vla/: base.yaml  distilgpt2.yaml  qwen2.5-0.5b.yaml
core/models/: __init__.py  load.py  materialize.py
core/training/: __init__.py  materialize.py  metrics.py
core/util/: __init__.py  data_utils.py  overwatch.py  vla_utils.py
hf_wrapper/: __init__.py  configuration_vla.py  modeling_vla.py  processor_vla.py  processors.py  vla_policy.py
launch/: README.md  base.sh
offline_traj_compress/: check_compression_result.py  compress_dataset_V4_2.py  compress_dataset_v4_1.py  compression_fail.json  compression_results_v2.json  control_point_bin_distribution.npy  gd_compress_dataset_v1.py  gd_compression_results_v1.json  gen_bin_distribution.py  pcompress_dataset_v4.py  pcompress_dataset_v4_1.py  post_process_compression_results.py  pre_compress_dataset_v3_multithread.py  pre_compress_datset_v3.py  pre_compress_datset_v3_slurm.py  visualize_results.py
prismatic/: __init__.py
scripts/: convert_checkpoint_to_lerobot_format.py  eval.py  eval.sh  libero_eval.py  pretrain.py  train.py
test/: visualize_results.py
trajectory_compression/: bspline_v3.py  check_compression_result.py  epsidoe_2_dataset_index.json  pre_compress_dataset_v3_multithread_fix.py  visualize_results.py
utils/: download_models.py  training_utils.py
vla-scripts/: finetune.py  train.py
(+128 files in other folders)
