
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_vla"
version = "0.0.1"
description = "VLA Policy for LeRobot"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "torch",
    "transformers"
]

# Entry point to register VLA policy with lerobot
[project.entry-points."lerobot.policies"]
vla = "hf_wrapper"

[tool.setuptools.packages.find]
include = ["hf_wrapper*", "prismatic*"]